# atlantis

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  atlantis.mpc  benchmark-runner.py  benchmark-text.txt  install-solver.sh  main.cpp  plot-formatter.json  plot-formatter.py  slack-benchmark.sh  slack-formatter.py  tmp.sh
.github/workflows/: cmake.yml
benchmark/: bAllInterval.cpp  bCarSequencing.cpp  bEngine.cpp  bGccPriorityQueue.cpp  bGolombRuler.cpp  bMagicSquare.cpp  bNQueens.cpp  bPropagationQueue.cpp  bSTLPriorityQueue.cpp  bSudoku.cpp  bTSP.cpp  bTSPTW.cpp  bTSPTWAllDiff.cpp  bTest.cpp  bVesselLoading.cpp  benchmark.hpp
benchmark/artificial/: bElementLinearTree.cpp  bElementVarTree.cpp  bExtremeDynamic.cpp  bExtremeStatic.cpp  bFoldableBinaryTree.cpp  bLinearAllDifferent.cpp  bLinearTree.cpp
benchmark/datastructure/: bPropagationQueue.cpp  bSTLPriorityQueue.cpp
cmake/: FindGecode.cmake
examples/: queens.cpp
ext/nlohmann/: json.hpp
fzn-challanges/: p1f_03.fzn
fzn-challanges/2008/: debruijn_binary_02_03.fzn  nmseq_020.fzn  pentominoes-int_01.fzn  quasigroup7_05.fzn  radiation_01.fzn  rcpsp_00.fzn  search_stress_04_04.fzn  shortest_path_00.fzn  slow_convergence_0100.fzn  trucking_01.fzn
fzn-challanges/2009/: black-hole_01.fzn  fillomino_08.fzn  non_non_awful_2.fzn  open_stacks_01_gp50by50_1.fzn  prop_stress_0100.fzn  rect_packing_rpp05_true.fzn  roster_model_chicroster_dataset_3.fzn  search_stress2_02_07.fzn  still_life_still_life_5.fzn  vrp_A-n34-k5.vrp.fzn
fzn-challanges/2010/: CostasArray_14.fzn  GridColoring_5_6.fzn  bacp-1.fzn  depot_placement_a280_4.fzn  filter_ar_1_1.fzn  ghoulomb_3-7-20.fzn  sb_sb_12_12_5_0.fzn  sugiyama2_g3_8_8_2.fzn  wwtpp_ex04240_2400_100.fzn  wwtpp_ex05100_2600_100.fzn
fzn-challanges/2011/: CostasArray_14.fzn  TableLayout_en-760-310-line795.fzn  bacp-9.fzn  black-hole_9.fzn  depot_placement_att48_5.fzn  fastfood_ff2.fzn  fillomino_08.fzn  non_non_awful_1.fzn  open_stacks_01_problem_10_20_1.fzn  pattern_set_mining_german-credit-k1.fzn  pc_25-5-5-9.fzn  pentominoes-int_02.fzn  rcmsp_easy_4.fzn  roster_model_chicroster_dataset_10.fzn  sb_sb_12_12_5_3.fzn  ship-schedule.cp_4Ships.fzn  vrp_A-n32-k5.vrp.fzn  wwtpp_ex02840_2400_100.fzn
fzn-models/: all_different_minimize_gecode.fzn  car_sequencing.fzn  car_sequencing_gecode.fzn  comp_domain_ann_gecode.fzn  magic_square.fzn  magic_square_gecode.fzn  n_queens.fzn  n_queens_gecode.fzn  simple_minimize.fzn  tsp_alldiff.fzn  tsp_alldiff_gecode.fzn
include/: cblsModel.hpp  fznBackend.hpp  minizincLogger.hpp  solver.hpp  types.hpp
include/atlantis/: fznBackend.hpp
include/base/: intSize.hpp
include/constraints/: allDifferent.hpp  allDifferentExcept.hpp  boolAllEqual.hpp  boolEqual.hpp  boolLessEqual.hpp  boolLessThan.hpp  constraint.hpp  countConst.hpp  equal.hpp  exists.hpp  globalCardinality.hpp  globalCardinalityClosed.hpp  globalCardinalityConst.hpp  inDomain.hpp  inSparseDomain.hpp  lessEqual.hpp  lessThan.hpp  notEqual.hpp  notEqualConst.hpp  or.hpp  powDomain.hpp
include/core/: SavedInt.hpp  SavedValue.hpp  constraint.hpp  domains.hpp  engine.hpp  factory.hpp  hashes.hpp  idMap.hpp  intVar.hpp  intVarView.hpp  intView.hpp  invariant.hpp  priorityList.hpp  propagationElement.hpp  propagationEngine.hpp  propagationNode.hpp  savedInt.hpp  savedValue.hpp  tracer.hpp  types.hpp  var.hpp  varView.hpp  view.hpp
include/domain/: intDomain.hpp
include/exceptions/: exceptions.hpp
include/invariantgraph/: fznInvariantGraph.hpp  implicitConstraintNode.hpp  invariantGraph.hpp  invariantGraphBuilder.hpp  invariantGraphRoot.hpp  invariantNode.hpp  objectiveTranslator.hpp  parseHelper.hpp  softConstraintNode.hpp  structure.hpp  types.hpp  varNode.hpp  variableDefiningNode.hpp  variableNode.hpp  violationInvariantNode.hpp
include/invariants/: absDiff.hpp  binaryMax.hpp  binaryMin.hpp  boolAnd.hpp  boolLinear.hpp  boolOr.hpp  boolXor.hpp  count.hpp  countConst.hpp  element2dConst.hpp  element2dVar.hpp  elementConst.hpp  elementVar.hpp  exists.hpp  forAll.hpp  globalCardinalityOpen.hpp  ifThenElse.hpp  intDiv.hpp  invariant.hpp  linear.hpp  max2.hpp  maxSparse.hpp  minSparse.hpp  mod.hpp  plus.hpp  pow.hpp  times.hpp
include/logging/: logger.hpp
include/misc/: logging.hpp
include/propagation/: bottomUpExplorer.hpp  bottomUpPropagationGraph.hpp  engine.hpp  layeredPropagationQueue.hpp  markingTopDownPropagationGraph.hpp  outputToInputExplorer.hpp  propagationEngine.hpp  propagationGraph.hpp  propagationQueue.hpp  solver.hpp  solverBase.hpp  topDownPropagationGraph.hpp  types.hpp
include/search/: Objective.hpp  annealer.hpp  assignment.hpp  cost.hpp  domains.hpp  move.hpp  objective.hpp  randomProvider.hpp  searchController.hpp  searchProcedure.hpp  searchStatistics.hpp  searchVariable.hpp  searchprocedure.hpp  solutionListener.hpp  variableStore.hpp
include/store/: store.hpp
include/utils/: domains.hpp  flowNetwork.hpp  fznAst.hpp  fznOutput.hpp  hashes.hpp  idMap.hpp  priorityList.hpp  propagationListNode.hpp  variant.hpp
include/variables/: committable.hpp  committableInt.hpp  intVar.hpp  savedInt.hpp  savedValue.hpp  var.hpp
include/views/: bool2IntView.hpp  boolView.hpp  elementConst.hpp  equalConst.hpp  equalView.hpp  greaterEqualConst.hpp  greaterEqualView.hpp  greaterThanView.hpp  inDomain.hpp  inSparseDomain.hpp  intAbsView.hpp  intMaxView.hpp  intOffsetView.hpp  intView.hpp  lessEqualConst.hpp  lessEqualView.hpp  notEqualConst.hpp  notEqualView.hpp  scalarView.hpp  view.hpp  violation2Bool.hpp  violation2BoolView.hpp
minizinc/: .gitignore  astra-cbls.mpc  astra-cbls.msc  atlantis.mpc  atlantis.msc
minizinc/lib/: alldifferent.mzn  circuit.mzn  fzn_all_different_int.mzn  fzn_all_different_int_reif.mzn  (+10 more)
mzn-models/: all_different_minimize.mzn  car_sequencing.dzn  car_sequencing.mzn  comp_domain_ann.mzn  magic_square.mzn  n_queens.mzn  simple_minimize.mzn  tsp_17.dzn  tsp_alldiff.mzn
src/: cblsModel.cpp  fznBackend.cpp  main.cpp  minizincLogger.cpp  solver.cpp
test/: tTempTest.cpp  testHelper.hpp
(+1460 files in other folders)
